--- a/style.css
+++ b/style.css
@@ -220,83 +220,72 @@
 /* ____________________________GRIDS_________________________*/
 
 
-/* * {
-    box-sizing: border-box;
-  } */
-  
-  .grid-container {
-    margin: 50px auto;
-    /* margin-top: 20%; */
-    width: 80%;
-    height: 90vh;
+/*
+  The grid itself needs only 4 CSS declarations:
+*/
+
+.myGallery {
     display: grid;
-    grid-auto-columns: 1fr;
-    gap: 1em;
-    grid-template-areas: 
-      'one one two five five'
-      'one one three five five'
-      'four four four five five'
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
   
-  .grid-item {
-    border-radius: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+  .myGallery img {
+    width: 100%;
   }
   
-  .grid-item:nth-child(1) {
-    grid-area: one;
-    background-color: #222E50;
+  /*
+    And here are some declarations for the image caption.
+    Just hover over one of the last 5 images to see it.
+  */
+  
+  .myGallery .item {
+    position: relative;
+    overflow: hidden;
   }
   
-  .grid-item:nth-child(2) {
-    grid-area: two;
-    background-color: #007991;
+  .myGallery .item img {
+    vertical-align: middle;
   }
   
-  .grid-item:nth-child(3) {
-    grid-area: three;
-    background-color: #439a86;
+  .myGallery .caption {
+    margin: 0;
+    padding: 1em;
+    position: absolute;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-height: 100%;
+    overflow: auto;
+    box-sizing: border-box;
+    transition: transform 0.5s;
+    transform: translateY(100%);
+    background: rgba(0, 0, 0, 0.7);
+    color: rgb(255, 255, 255);
   }
   
-  .grid-item:nth-child(4) {
-    grid-area: four;
-    background-color: #f6511d;
+  .myGallery .item:hover .caption {
+    transform: translateY(0%);
   }
   
-  .grid-item:nth-child(5) {
-    grid-area: five;
-    background-color: #c1292e;
+  /*
+    The rest is only styling for this example page
+  */
+  
+  @import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;900&display=swap");
+  
+  body {
+    font: 400 1.5em/1.58 Vollkorn, serif;
   }
   
-  
-  @media (max-width: 940px) {
-    .grid-container {
-      grid-template-areas: 
-      'one one two five five'
-      'three three three five five'
-      'four four four four four'
-    }
+  h1,
+  h3 {
+    text-align: center;
+    margin: 20px 0 20px 0;
   }
   
-  @media (max-width: 640px) {
-    .grid-container {
-      grid-template-areas: 
-      'one one two two two'
-      'three three three five five'
-      'four four four four four'
-    }
+  .myGallery {
+    font-size: 1rem;
   }
   
-  @media (max-width: 460px) {
-    .grid-container {
-      grid-template-areas: 
-      'one'
-      'two'
-      'three'
-      'four'
-      'five';
-    }
-  }
