--- a/style.css
+++ b/style.css
@@ -218,74 +218,43 @@
     margin: 5px 20px 5px 20px;
 }
 /* ____________________________GRIDS_________________________*/
-
-
-/*
-  The grid itself needs only 4 CSS declarations:
-*/
-
-.myGallery {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+.txt{
+    margin: 15px 0 10px 0;
+}
+h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
   }
   
-  .myGallery img {
-    width: 100%;
+  .column {
+    flex: 20%;
+    max-width: 25%;
+    padding: 5px 8px;
   }
   
-  /*
-    And here are some declarations for the image caption.
-    Just hover over one of the last 5 images to see it.
-  */
-  
-  .myGallery .item {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .myGallery .item img {
+  .column img {
+    margin-top: 8px;
     vertical-align: middle;
-  }
-  
-  .myGallery .caption {
-    margin: 0;
-    padding: 1em;
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    left: 0;
     width: 100%;
-    max-height: 100%;
-    overflow: auto;
-    box-sizing: border-box;
-    transition: transform 0.5s;
-    transform: translateY(100%);
-    background: rgba(0, 0, 0, 0.7);
-    color: rgb(255, 255, 255);
   }
   
-  .myGallery .item:hover .caption {
-    transform: translateY(0%);
+  @media (max-width: 1200px) {
+    .column {
+      flex: 40%;
+      flex-wrap: wrap;
+      max-width: 50%;
+    }
   }
   
-  /*
-    The rest is only styling for this example page
-  */
-  
-  @import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;900&display=swap");
-  
-  body {
-    font: 400 1.5em/1.58 Vollkorn, serif;
+  @media (max-width: 600px) {
+    .column {
+      flex: 50%;
+      max-width: 100%;
+    }
   }
-  
-  h1,
-  h3 {
-    text-align: center;
-    margin: 20px 0 20px 0;
-  }
-  
-  .myGallery {
-    font-size: 1rem;
-  }
-  
