--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
 .logo{
     order: 1;
     font-size: 2.3rem;
+    color: #000;
 }
 
 .menu-items li{
@@ -227,11 +228,13 @@
 /* ____________________________GRIDS_________________________*/
 .txt{
     margin: 15px 0 10px 0;
+    /* size: 2.3rem; */
 }
-h3{
+.txt h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #000;
 }
 .grid-container {
     display: flex;
@@ -265,3 +268,61 @@ h3{
       max-width: 100%;
     }
   }
+
+  ------------------------------------FOOTER_______________________________________
+  /* body{
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans",sans-serif;
+    background-color:#000;
+  } */
+  
+  .ground{
+    min-height: 100vh;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  footer{
+    background: #faf5f5;
+    padding: 20px 0;
+  }
+  
+  .footer_container{
+    max-width: 1300px;
+    margin: auto;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap-reverse;
+  }
+  
+  .logo3{
+    width: 180px;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  
+  .social_media{
+    margin: 20px 150px;
+  }
+  
+  .social_media a{
+    color: #000;
+    font-size: 24px;
+    text-decoration: none;
+    transition: .6s;
+  }
+  
+  .social_media a:hover{
+    color: gold;
+  }
+  h1{
+    font-size: 40px;
+    color: #fff;
+    font-weight: bold;
+  }
+  
