--- a/style.css
+++ b/style.css
@@ -181,9 +181,16 @@
     .navbar-container input[type="checkbox"]:checked ~ .logo{
         display: none;
     }
+    .logo{
+        size: 1.8rem;
+    }
 
     .logo2 img{
         margin-top: 45px;
+    }
+
+    .info .socials img{
+        margin: 5px 12px 5px 12px;
     }
 }
 /* ----------------------------INFO________________________________________ */
@@ -209,7 +216,7 @@
     /* background-color: #6849d5; */
     height: 40%;
     width: 55%; 
-    margin-top: ;
+    /* margin-top: ;/ */
 }
 
 .info .name{
@@ -270,12 +277,12 @@
   }
 
   ------------------------------------FOOTER_______________________________________
-  /* body{
+  body{
     margin: 0;
     padding: 0;
     font-family: "Open Sans",sans-serif;
     background-color:#000;
-  } */
+  }
   
   .ground{
     min-height: 100vh;
@@ -298,12 +305,17 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap-reverse;
+    background-color: #000;
   }
   
+  .footer_container p{
+    color: #fff;
+  }
   .logo3{
     width: 180px;
     font-size: 16px;
     font-weight: bold;
+    color: #fff;
   }
   
   .social_media{
@@ -311,7 +323,7 @@
   }
   
   .social_media a{
-    color: #000;
+    color: #fff;
     font-size: 24px;
     text-decoration: none;
     transition: .6s;
