--- a/style.css
+++ b/style.css
@@ -153,8 +153,8 @@
     .logo{
         position: absolute;
         top: 10px;
-        right: 15px;
-        font-size: 2.5rem;
+        right: 12px;
+        font-size: 2.2rem;
     }
 
     .navbar-container input[type="checkbox"]:checked ~ .menu-items{
@@ -181,7 +181,7 @@
     .navbar-container input[type="checkbox"]:checked ~ .logo{
         display: none;
     }
-    .logo{
+    .menu-items .logo{
         size: 1.8rem;
     }
 
@@ -293,8 +293,9 @@
   }
   
   footer{
-    background: #faf5f5;
+    background-color: #000;
     padding: 20px 0;
+    margin-top: 20px;
   }
   
   .footer_container{
